Closed Bug 255656 Opened 20 years ago Closed 20 years ago

Gtk-WARNING/Gdk-CRITICAL/GLib-GObject-WARNING every time menus are accessed

Categories

(Firefox :: General, defect)

x86
Linux
defect
Not set
normal

Tracking

()

VERIFIED FIXED

People

(Reporter: jmd, Assigned: bryner)

Details

(Keywords: fixed-aviary1.0, fixed1.7.5, regression)

Attachments

(1 file)

I've been seeing this for a month or so, and figured someone was on top of it,
but it's been getting annoying, and a query tonight turned up nothing.

Anytime I access a menu (either from the menu toolbar, or a context menu), I get
a ton of Gtk/Gdk assertions printed to STDERR. RHL 8.0, gtk2-2.0.6-8,
gdk-pixbuf-0.18.0-4. This wasn't happening, if I recall correctly, on 0.9.1.

The errors are in this sequence:

(Gecko:6807): Gtk-WARNING **: gtkwidget.c:6188: widget class `GtkMenuItem' has
no property named `selected_shadow_type'

(Gecko:6807): Gdk-CRITICAL **: file gdkgc-x11.c: line 645
(gdk_gc_set_clip_rectangle): assertion `GDK_IS_GC (gc)' failed

(Gecko:6807): Gdk-CRITICAL **: file gdkgc-x11.c: line 645
(gdk_gc_set_clip_rectangle): assertion `GDK_IS_GC (gc)' failed

(Gecko:6807): Gdk-CRITICAL **: file gdkgc-x11.c: line 645
(gdk_gc_set_clip_rectangle): assertion `GDK_IS_GC (gc)' failed

(Gecko:6807): Gdk-CRITICAL **: file gdkgc-x11.c: line 645
(gdk_gc_set_clip_rectangle): assertion `GDK_IS_GC (gc)' failed

I usually get about 4 runs of those 5 errors for every menu I access. Figured I
should speak up before the PR.
Same errors continue, and also now seeing:

(Gecko:21778): GLib-GObject-WARNING **: gsignal.c:1633: signal `select_all' is
invalid for instance `0x9383b28'

being printed to my terminal hundreds of times with 0.10. This is a regression,
and quite a nuisance, not to mention how terrible it must look to new users.
Isn't there a way to tell glib and gtk not to print such extraneous warnings?
Library versions are the same as previously reported.
Flags: blocking-aviary1.0?
Keywords: regression
Summary: Gtk-WARNING & Gdk-CRITICAL when accessing menus on aviary → Gtk-WARNING/Gdk-CRITICAL/GLib-GObject-WARNING every time menus are accessed
Attached patch patchSplinter Review
This should fix the errors.  Couple of problems:

selected_shadow_type was introduced in gtk 2.1.0.  On older versions, it should
always use GTK_SHADOW_OUT.  I believe this also causes the GC error due to the
shadow type being an uninitialized value.

select_all as a signal on GtkTextView was introduced in gtk 2.2.2.  Older
versions will implement it using other signals, so we should just not attach
that signal handler.
Assignee: firefox → bryner
Status: NEW → ASSIGNED
Attachment #161808 - Flags: superreview?(dbaron)
Attachment #161808 - Flags: review?(dbaron)
Attachment #161808 - Flags: superreview?(dbaron)
Attachment #161808 - Flags: superreview+
Attachment #161808 - Flags: review?(dbaron)
Attachment #161808 - Flags: review+
Attachment #161808 - Flags: approval-aviary?
checked into trunk
Status: ASSIGNED → RESOLVED
Closed: 20 years ago
Resolution: --- → FIXED
Comment on attachment 161808 [details] [diff] [review]
patch

a=asa for aviary checkin.
Attachment #161808 - Flags: approval-aviary? → approval-aviary+
checked into branches.
V'ing FIXED. No more "2>/dev/null" every time I run Firefox. Thanks for the
patch, Bryan. (There is a similar, less severe problem in the installer on Red
Hat 8.0, where pango warnings are printed. That one is bug 257831).
Status: RESOLVED → VERIFIED
Flags: blocking-aviary1.0?
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: