Fix gtk warnings on older gtk versions (bug 255656, r+sr=dbaron).